--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
 	    		<ul>
               <li><a href="http://github.com/davisrobotics" class="navlink">github.</a></li>
               <li><a href="http://pages.github.com" class="navlink">Proudly Hosted By GitHub Pages.</a></li>
-              <li><a href="http://github.com/rishiosaur">Made by rishiosaur.</a></li>
+              <li><a href="http://github.com/rishiosaur" class="navlink">Made by rishiosaur.</a></li>
 				</ul>
 			</footer>
 		</body>
